fixed positioning of scroll indicator on mobile

--- a/_assets/stylesheets/custom.sass
+++ b/_assets/stylesheets/custom.sass
@@ -1272,27 +1272,28 @@ input#mce-EMAIL
     > .section.posts:only-child > .container
       width: 50%
 
-@media (max-width: 750px) and (orientation: portrait)
-  .landing
-    height: 80%
-    #heading-wrapper
-      top: 40%
-    #scroll-indicator
-      bottom: 20%
+// @media (max-width: 750px) and (orientation: portrait)
+//   .landing
+//     height: 80%
+//     #heading-wrapper
+//       top: 40%
+//     #scroll-indicator
+//       bottom: 20%
+//
+// @media (max-width: 1200px) and (orientation: portrait)
+//   .landing
+//     padding: 0
+//     height: 66%
+//     #scroll-indicator
+//       bottom: 35%
+//       transform: translateY(-50%)
+//       -webkit-transform: translateY(-50%)
+//       -moz-transform: translateY(-50%)
+//     #heading-wrapper
+//       top: 33%
+//   #heading
+//     font-size: 122%
 
-@media (max-width: 1200px) and (orientation: portrait)
-  .landing
-    padding: 0
-    height: 66%
-    #scroll-indicator
-      bottom: 33% + 2%
-      transform: translateY(-50%)
-      -webkit-transform: translateY(-50%)
-      -moz-transform: translateY(-50%)
-    #heading-wrapper
-      top: 33%
-  #heading
-    font-size: 122%
 
 @media (min-width: 550px) and (max-width: 750px) and (orientation: landscape)
   .landing
@@ -1574,6 +1575,16 @@ input#mce-EMAIL
     vertical-align: middle
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 13/10), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (min-device-pixel-ratio: 1.3), only screen and (min-resolution: 120dpi)
+  .landing
+    height: 100%
+    #heading-wrapper
+      top: 50%
+  #scroll-indicator
+    bottom: 0
+    transform: translateX(0%)
+    -webkit-transform: translateX(0%)
+    -moz-transform: translateX(0%)
+
   .pagination
     font-size: 200%
   .cloud-1, .cloud-2, .cloud-3, .cloud-4
